# mlops

./: .dockerignore  .env.sample  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .setup_env.yml  Dockerfile  README.md  pyproject.toml
.github/actions/python_project_setup/: action.yml
.github/workflows/: ci.yml
mlops/airflow/: Dockerfile  docker-compose.yaml  requirements.txt
mlops/airflow/dags/: prepare_features.py
mlops/clearml/: docker-compose.yaml  train_model.py
mlops/deploy/: docker-compose.yaml  prometheus.yml
src/service/: loaded_models.py  main.py  schemas.py  settings.py
tests/: test_main.py
