[project]
name = "mlps_final_project"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "awscli~=1.42.50",
    "boto3~=1.40.69",
    "catboost~=1.2.8",
    "fastapi~=0.115.12",
    "gensim~=4.4.0",
    "gunicorn~=23.0.0",
    "httpx~=0.28.1",
    "joblib~=1.5.2",
    "numpy~=2.2.5",
    "pandas~=2.2.3",
    "pandera==0.24.0",
    "pyarrow~=22.0.0",
    "pydantic-settings>=2.13.1",
    "pytest~=9.0.0",
    "pytest-mock~=3.15.1",
    "scikit-learn~=1.6.1",
    "types-boto3[s3]>=1.42.84",
    "uvicorn~=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

include = ["src", "tests"]
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL", ]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest]
pythonpath = [".", "src"]
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]
